--- a/js-css-clock/index.html
+++ b/js-css-clock/index.html
@@ -59,7 +59,7 @@
     .hand {
       width: 50%;
       height: 6px;
-      background: black;
+      background: rgb(255, 255, 255);
       position: absolute;
       top: 50%;
       transform-origin: 100%;
