--- a/ai-created-webpage/index.html
+++ b/ai-created-webpage/index.html
@@ -33,6 +33,7 @@
     /* Add CSS for text inside the block */
     .design-statement p {
       text-align: left;
+      line-height: 1.5em;
     }
   </style>
 </head>
