--- a/p5js-perlin-noise-flow/index.html
+++ b/p5js-perlin-noise-flow/index.html
@@ -3,11 +3,10 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
   </head>
-  <body>
-    <iframe style="border: 0px; width: 800px; height: 800px;" src="https://editor.p5js.org/hua3467/full/GEmcWdmkC"></iframe>
+  <body style="display: flex;">
+    <iframe style="border: 0px; width: 800px; height: 800px;position: relative; margin-left: auto; margin-right: auto;" src="https://editor.p5js.org/hua3467/full/GEmcWdmkC"></iframe>
   </body>
 </html>
