--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
     <ul>
         <li>
-            <a href="./ai-created-webpage/"></a>
+            <a href="./ai-created-webpage/">ai-created-webpage</a>
         </li>
-        <li><a href="./animated-navbar/"></a></li>
-        <li><a href="./color-drawing-canvas/"></a></li>
-        <li><a href="./CSSAnimatedResponsiveNavbar/"></a></li>
-        <li><a href="./glassmorphism-cards/"></a></li>
-        <li><a href="./js-css-clock/"></a></li>
-        <li><a href="./neumorphism-gradient-loader/"></a></li>
-        <li><a href="./p5js-perlin-noise-flow/"></a></li>
-        <li><a href="./panel-gallery/"></a></li>
-        <li><a href="./perlin-noise-flow/"></a></li>
-        <li><a href="./style-control-panel/"></a></li>
-        <li><a href="./tracking-particle/"></a></li>
-        <li><a href="./tri-squar/"></a></li>
+        <li><a href="./animated-navbar/">animated-navbar</a></li>
+        <li><a href="./color-drawing-canvas/">color-drawing-canvas</a></li>
+        <li><a href="./CSSAnimatedResponsiveNavbar/">CSSAnimatedResponsiveNavbar</a></li>
+        <li><a href="./glassmorphism-cards/">glassmorphism-cards</a></li>
+        <li><a href="./js-css-clock/">js-css-clock</a></li>
+        <li><a href="./neumorphism-gradient-loader/">neumorphism-gradient-loader</a></li>
+        <li><a href="./p5js-perlin-noise-flow/">p5js-perlin-noise-flow</a></li>
+        <li><a href="./panel-gallery/">panel-gallery</a></li>
+        <li><a href="./perlin-noise-flow/">perlin-noise-flow</a></li>
+        <li><a href="./style-control-panel/">style-control-panel</a></li>
+        <li><a href="./tracking-particle/">tracking-particle</a></li>
+        <li><a href="./tri-squar/">tri-squar</a></li>
     </ul>
 </body>
 </html>
